@@ -1,6 +1,14 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-05-25
+  Converted the process that runs all group definitions for a year to a Batch API process, for better memory management and UI.
+  
+
+2016-05-24
+  Added extra logic so that test scores with a date of null or 0000-00-00 will be given an "N/A" date, as well as extra CSS to help
+  style the test scores.
+  
 
 2016-05-20
   Added setting to School Data form (system.module) for excluding degrees from "appears in" counts.
